# yjwujian-monitor

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  README.md  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  start_services.bat  stop_services.bat  tailwind.config.js  tsconfig.backend.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.specify/memory/: constitution.md
.specify/specs/001-price-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-price-monitor/contracts/: cbg-api.md
data/: monitor.db-shm  monitor.db-wal  monitor.db.corrupted
docs/: desktop-agent-task-prompts.md  desktop-app-development-guide.md  development-plan.md  product-proposal-package.md  windows-packaging-route.md
docs/research/: cbg-research-report.md
electron/: main.ts  preload.ts  tsconfig.json
keys/: public.pem
misc/: capture-screenshots.ts
scripts/: generate-license.ts
src-rust/: Cargo.toml
src-rust/crates/app/: Cargo.toml  tauri.conf.json
src-rust/crates/app/capabilities/: default.json
src-rust/crates/app/src/: lib.rs  main.rs
src-rust/crates/app/src/commands/: mod.rs  monitor.rs  search.rs  settings.rs  watchlist.rs
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/src/: lib.rs  monitor.rs  search.rs  settings.rs  watchlist.rs
src-rust/crates/data/: Cargo.toml
src-rust/crates/data/src/: connection.rs  lib.rs  migrations.rs
src-rust/crates/data/src/models/: alert.rs  group.rs  item.rs  mod.rs  price_history.rs  settings.rs  watchlist.rs
src-rust/crates/data/src/repositories/: alert_repository.rs  group_repository.rs  item.rs  item_repository.rs  mod.rs  price_history_repository.rs  settings.rs  settings_repository.rs  watchlist.rs  watchlist_repository.rs
src-rust/crates/net/: Cargo.toml
src-rust/crates/net/src/: cache.rs  image_cache.rs  lib.rs  rate_limiter.rs
src-rust/crates/net/src/cbg/: client.rs  item_detail.rs  mod.rs  search.rs  types.rs
src-rust/crates/notify/: Cargo.toml
src-rust/crates/notify/src/: bark.rs  dingtalk.rs  feishu.rs  lib.rs  pushplus.rs  webhook.rs
src-rust/crates/shared/: Cargo.toml
src-rust/crates/shared/src/: commands.rs  error.rs  events.rs  lib.rs  types.rs
src-rust/crates/ui/: Cargo.toml  Trunk.toml  index.html
src-rust/crates/ui/src/: lib.rs
src-rust/crates/ui/src/pages/: dashboard.rs  mod.rs  search.rs  settings.rs  watchlist.rs
src-rust/crates/ui/src/services/: api.rs
src/backend/: index.js  index.ts
src/backend/db/: index.ts  init.ts  schema.sql
src/backend/db/migrations/: 001-add-user-id.sql
src/backend/middleware/: auth.ts
src/backend/routes/: alerts.ts  auth.ts  battle-records.ts  compare.ts  groups.ts  items.ts  license.ts  monitor.ts  settings.ts  watchlist.ts
src/backend/services/: alert.ts  auth.ts  battle-record.ts  cbg.ts  cleanup.ts  device.ts  email.ts  license.ts  monitor.ts  notification.ts
src/backend/utils/: data-paths.ts  date-utils.ts  jwt.ts  machine-code.ts  password.ts  star-grid.ts
src/frontend/: App.tsx
src/frontend/components/: BattleRecordsPage.tsx  CapturePreview.tsx  Compare3DPage.tsx  ComparePage.tsx  ControlledModelView.tsx  Dashboard.tsx  ItemCard.tsx  ItemDetail.tsx  ItemDetailModal.tsx  Layout.tsx  LayoutWrapper.tsx  LicenseAdminPage.tsx  LoginPage.tsx  PlayerProfilePage.tsx  ProtectedRoute.tsx  RegisterPage.tsx  SearchPanel.tsx  Settings.tsx  StarGridSlots.tsx  SubItemsList.tsx  VerifyEmailPage.tsx  Watchlist.tsx
src/frontend/contexts/: AuthContext.tsx
src/frontend/pages/: LoginPage.tsx  RegisterPage.tsx
src/frontend/services/: api.ts  download.ts
src/frontend/styles/: index.css
src/frontend/types/: desktop.d.ts
src/shared/: types.ts
tests/integration/api/: routes.test.js  routes.test.ts
tests/integration/db/: database.test.js  database.test.ts
tests/unit/: email.test.js  email.test.ts  jwt.test.js  jwt.test.ts  password.test.js  password.test.ts
tests/unit/services/: price.test.js  price.test.ts
