[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yjwujian-monitor"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
core = { path = "../core" }
data = { path = "../data" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"

[build-dependencies]
tauri-build = "2"
