[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
data = { path = "../data" }
net = { path = "../net" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
