[package]
name = "net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
moka = { version = "0.12", features = ["future"] }
shared = { path = "../shared" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
